[package]
name = "blazen-audio-piper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deprecated: renamed to `blazen-audio-tts`. This crate is a thin re-export shim kept for one release to ease migration."

[dependencies]
blazen-audio-tts = { workspace = true }

[features]
default = []
# Forward the `engine` feature to the renamed crate so downstream
# `blazen-audio-piper/engine` keeps working until consumers migrate.
engine = ["blazen-audio-tts/engine"]

[lints]
workspace = true
