[package]
name = "blazen-audio-tts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Multi-backend text-to-speech crate for Blazen (any-tts local engines + OpenAI-compatible HTTP)"

[dependencies]
blazen-audio = { workspace = true }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }
async-trait.workspace = true
any-tts = { version = "0.1.2", default-features = false, features = ["kokoro", "vibevoice", "qwen3-tts", "download"], optional = true }
reqwest = { workspace = true, features = ["multipart"], optional = true }
base64 = { workspace = true, optional = true }
blazen-audio-piper-vendored = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["ureq"], optional = true }
blazen-audio-codec = { workspace = true, optional = true }
blazen-audio-core = { workspace = true, optional = true }
rustfft = { version = "6.4.1", optional = true }
futures-core.workspace = true
futures-util.workspace = true
regex = { workspace = true, optional = true }

[features]
default = ["openai"]
# `anytts` activates the underlying any-tts crate (Kokoro / VibeVoice /
# Qwen3-TTS); without it the AnyTts backend errors with `Unsupported`.
anytts = ["dep:any-tts"]
# `openai` activates the OpenAI-compatible HTTP backend client (targets
# `/v1/audio/speech` plus the de-facto `/v1/voices/*` extension surface).
openai = ["dep:reqwest", "dep:base64"]
# Back-compat alias: the previous (single-engine) feature name. Will be
# removed one release after the multi-backend restructure ships.
engine = ["anytts"]
# `piper` activates the vendored piper-rs backend (tract-onnx inference +
# subprocess espeak-ng phonemizer). See `backends/piper.rs`.
piper = ["dep:blazen-audio-piper-vendored"]
# Live, network-dependent tests that pull real Piper voices from Hugging
# Face. Gated separately so `cargo test --features piper` stays hermetic.
live-models = []
# `bark` enables the Suno-AI Bark text-to-speech backend. 3-stage AR
# transformer (semantic → coarse → fine) + EnCodec waveform synthesis.
# Zero-shot voice cloning via prompt-conditioned generation. Upstream
# `suno-ai/bark` is MIT-licensed.
bark = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:blazen-audio-codec",
    "blazen-audio-codec/encodec",
]
# `f5-tts` enables the SWivid F5-TTS flow-matching DiT zero-shot
# voice-cloning text-to-speech backend. Reuses
# blazen-audio-core::{dit, adaln, rope} primitives + adds a Vocos
# vocoder + Euler flow-matching sampler. 24 kHz mel-spectrogram output
# via iSTFT. Upstream `SWivid/F5-TTS` is MIT-licensed.
f5-tts = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:blazen-audio-core",
    "dep:rustfft",
]
# `spark-tts` enables the SparkAudio/Spark-TTS backend — BiCodec neural
# audio codec + Qwen2.5-0.5B autoregressive decoder for zero-shot
# voice-cloning text-to-speech. Wave S.2.1.a lands the BiCodec shared
# low-level primitives (Snake1d, weight-norm Conv1d/ConvTranspose1d,
# AdaLayerNorm, ResidualUnit, repeat_interleave_dim2). Upstream code is
# Apache-2.0; the published weights ship under CC-BY-NC-SA-4.0.
spark-tts = [
    "dep:candle-core",
    "dep:candle-nn",
]
# `maskgct` enables the Amphion MaskGCT masked-generative TTS backend
# (Llama-NAR T2S + SoundStorm S2A + RepCodec/DAC + Vocos). Wave M.1
# ships scaffolding only — every `TtsBackend` method returns
# `Unsupported` until Wave M.2 lands the real masked transformers.
# Upstream `open-mmlab/Amphion` is MIT-licensed.
maskgct = []

[lints]
workspace = true

[dev-dependencies]
mockito = "1.7.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
