[package]
name = "blazen-cabi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Hand-rolled C ABI over blazen-uniffi for the Ruby gem (via cbindgen + FFI gem) and any other FFI host"

[lib]
name = "blazen_cabi"
# cdylib  — loaded by Ruby's ffi gem (libblazen_cabi.{so,dylib,dll})
# staticlib — optional static archive for embedders that want to vendor
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
blazen-llm = { workspace = true }
blazen-uniffi = { version = "0.0.0-dev", path = "../blazen-uniffi", default-features = false }
# Control-plane crate is only used by the optional `distributed` feature; gate
# it so non-distributed builds don't pull in the full tonic/rustls stack.
blazen-core = { workspace = true, features = ["distributed"], optional = true }
blazen-controlplane = { workspace = true, optional = true }
# `tokio-util` is only used by the optional `distributed` feature to obtain
# `CancellationToken` for subscription handles. Gated to keep the non-
# distributed build slim. The `rt` feature carries the cancellation token.
tokio-util = { workspace = true, features = ["rt"], optional = true }
futures-util.workspace = true
libc = "0.2"
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
uuid = { workspace = true }
blazen-manager.workspace = true

[build-dependencies]
cbindgen = "0.29"

[features]
# Mirror blazen-uniffi's feature graph one-to-one so the cabi surface tracks
# whatever blazen-uniffi exposes under each flag.
default = ["local-all"]

embed = ["blazen-uniffi/embed"]
candle-embed = ["blazen-uniffi/candle-embed"]
mistralrs = ["blazen-uniffi/mistralrs"]
llamacpp = ["blazen-uniffi/llamacpp"]
candle-llm = ["blazen-uniffi/candle-llm"]
diffusion = ["blazen-uniffi/diffusion"]
whispercpp = ["blazen-uniffi/whispercpp"]
piper = ["blazen-uniffi/piper"]
tiktoken = ["blazen-uniffi/tiktoken"]
tract = ["blazen-uniffi/tract"]
# ORT-backed embedding backend (forwarded through blazen-uniffi; target-gated
# at the uniffi crate so musl builds skip it automatically).
fastembed = ["blazen-uniffi/fastembed"]

local-all = [
    "embed",
    "fastembed",
    "tract",
    "candle-embed",
    "mistralrs",
    "llamacpp",
    "candle-llm",
    "diffusion",
    "whispercpp",
    "piper",
    "tiktoken",
    "distributed",
    "otlp",
    "prometheus",
    "langfuse",
]

otlp = ["blazen-uniffi/otlp"]
prometheus = ["blazen-uniffi/prometheus"]
langfuse = ["blazen-uniffi/langfuse"]

distributed = [
    "blazen-uniffi/distributed",
    "dep:blazen-core",
    "dep:blazen-controlplane",
    "dep:tokio-util",
]

[lints]
workspace = true
