[package]
name = "blazen-cabi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Hand-rolled C ABI over blazen-uniffi for the Ruby gem (via cbindgen + FFI gem) and any other FFI host"

[lib]
name = "blazen_cabi"
# cdylib  — loaded by Ruby's ffi gem (libblazen_cabi.{so,dylib,dll})
# staticlib — optional static archive for embedders that want to vendor
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
blazen-llm = { workspace = true }
blazen-uniffi = { version = "0.0.0-dev", path = "../blazen-uniffi", default-features = false }
# Control-plane crate is only used by the optional `distributed` feature; gate
# it so non-distributed builds don't pull in the full tonic/rustls stack.
blazen-core = { workspace = true, features = ["distributed"], optional = true }
blazen-controlplane = { workspace = true, optional = true }
# `tokio-util` is only used by the optional `distributed` feature to obtain
# `CancellationToken` for subscription handles. Gated to keep the non-
# distributed build slim. The `rt` feature carries the cancellation token.
tokio-util = { workspace = true, features = ["rt"], optional = true }
futures-util.workspace = true
libc = "0.2"
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
uuid = { workspace = true }
blazen-manager.workspace = true
blazen-train = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }

[build-dependencies]
cbindgen = "0.29"

[features]
# Mirror blazen-uniffi's feature graph one-to-one so the cabi surface tracks
# whatever blazen-uniffi exposes under each flag.
default = ["local-all"]

embed = ["blazen-uniffi/embed"]
candle-embed = ["blazen-uniffi/candle-embed"]
mistralrs = ["blazen-uniffi/mistralrs"]
llamacpp = ["blazen-uniffi/llamacpp"]
candle-llm = ["blazen-uniffi/candle-llm"]
diffusion = ["blazen-uniffi/diffusion"]
whispercpp = ["blazen-uniffi/whispercpp"]
tts = ["blazen-uniffi/tts"]
tiktoken = ["blazen-uniffi/tiktoken"]
tract = ["blazen-uniffi/tract"]
# ORT-backed embedding backend (forwarded through blazen-uniffi; target-gated
# at the uniffi crate so musl builds skip it automatically).
fastembed = ["blazen-uniffi/fastembed"]

local-all = [
    "embed",
    "fastembed",
    "tract",
    "candle-embed",
    "mistralrs",
    "llamacpp",
    "candle-llm",
    "diffusion",
    "whispercpp",
    "tts",
    "tiktoken",
    "distributed",
    "otlp",
    "prometheus",
    "langfuse",
    "hf-loader",
    "training",
]

otlp = ["blazen-uniffi/otlp"]
prometheus = ["blazen-uniffi/prometheus"]
langfuse = ["blazen-uniffi/langfuse"]
# Hugging Face metadata probe used by ModelManager::load_from_hf. Forwards to
# `blazen-manager/hf-loader` (also pulled in transitively via the matching
# `blazen-uniffi/hf-loader` flag).
hf-loader = ["blazen-manager/hf-loader", "blazen-uniffi/hf-loader"]

distributed = [
    "blazen-uniffi/distributed",
    "dep:blazen-core",
    "dep:blazen-controlplane",
    "dep:tokio-util",
]
# Local LoRA fine-tuning via `ModelManager::train_lora` exposed through the
# C ABI. Forwards to the matching arms on blazen-uniffi / blazen-manager and
# pulls in blazen-train + tokenizers + candle-core for JsonlDataset construction
# and device parsing.
training = [
    "dep:blazen-train",
    "blazen-train/engine",
    "dep:tokenizers",
    "dep:candle-core",
    "blazen-uniffi/training",
    "blazen-manager/training",
]

[lints]
workspace = true
