[package]
name = "blazen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CLI for the Blazen workflow engine"

[[bin]]
name = "blazen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
