[package]
name = "blazen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
persist = ["dep:blazen-persist"]

[dependencies]
blazen-persist = { workspace = true, optional = true }
blazen-events.workspace = true
blazen-macros.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
blazen-events.workspace = true
blazen-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true
