[package]
name = "blazen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core workflow engine for Blazen - event-driven, async, pausable workflows"

[features]
persist = ["dep:blazen-persist"]
telemetry = ["dep:blazen-telemetry"]
distributed = []

[dependencies]
blazen-persist = { workspace = true, optional = true }
blazen-telemetry = { workspace = true, optional = true, features = ["history"] }
blazen-events.workspace = true
blazen-llm.workspace = true
blazen-macros.workspace = true
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
futures-util.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
serde_bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time"] }

# Cross-wasm32 deps (browser + wasi). web-time transparently re-exports
# std::time on native/wasi; it does NOT pull wasm-bindgen, so it can stay
# under the broad cfg(target_arch = "wasm32") umbrella.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

# Browser-WASM only (not WASIp2 -- WASIp2 has no JS runtime).
# `uuid["js"]` activates `getrandom`'s `js` shim which pulls wasm-bindgen,
# so it has to live alongside the wasm-bindgen-using crates.
[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
js-sys = "=0.3.95"
uuid = { workspace = true, features = ["js"] }

# WASIp2 has working tokio time/rt (see blazen-node's wasi cfg block); use
# them for the wasi async polyfills in src/runtime.rs instead of the
# wasm-bindgen-futures + setTimeout shim used in browsers.
# `futures-executor` provides the `block_on` fallback used by the runtime's
# `dispatch` when no host SPAWNER has been registered — surfacing host
# misconfiguration immediately instead of silently hanging.
[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time"] }
futures-executor = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
blazen-events.workspace = true
blazen-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true
