[package]
name = "blazen-embed-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local embedding backend for Blazen using HuggingFace candle"

[dependencies]
candle-core = { version = "0.10", optional = true, default-features = false }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig", "progressbar"] }
hf-hub = { workspace = true, features = ["tokio"], optional = true }
blazen-model-cache = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }

# Apple-target deps unconditionally pull metal + accelerate. The `metal` /
# `accelerate` feature flags exist as no-op markers for cross-platform
# scripts; on Apple targets the backends are always available, on other
# targets enabling them forwards to nothing (the dep can't compile there).
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
candle-core = { version = "0.10", optional = true, default-features = false, features = ["metal", "accelerate"] }
candle-nn = { version = "0.10", optional = true, features = ["metal", "accelerate"] }
candle-transformers = { version = "0.10", optional = true, features = ["metal", "accelerate"] }

[features]
default = ["cpu"]
engine = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
cpu = ["engine"]
cuda = ["engine", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["engine"]
accelerate = ["engine"]

[lints]
workspace = true
