[package]
name = "blazen-embed-fastembed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local embedding model backend for Blazen using fastembed-rs (ONNX Runtime)"

[dependencies]
fastembed = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
